experimental global sbt buildfile
Conflicts:
	CaseStudies/Philosophers/build.sbt
	Core/build.sbt